--- a/views/layout/main.handlebars
+++ b/views/layout/main.handlebars
@@ -8,23 +8,23 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="./public/css/login.css" />
+    <link rel="stylesheet"gihref="./css/login.css"/>
     <title>Digtal Exercise Book</title>
   </head>
 
   <body>
     <header class = "row d-flex justify-content-between bg-primary">
        <h1 class="col col-6">ABC Primary School</h1>
-       <img class="col col-2 col-md-1" src="./public/image/abc_logo_gold.png" alt="ABC school Logo" >
+       <img class="col col-2 col-md-1" src="./image/abc_logo_gold.png" alt="ABC school Logo" >
     </header>
 
     <main>
-        <!--{{Body}}-->
+        {{Body}}
     </main>
 
 
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./public/js/main.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
