--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,24 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-    />
-    <link rel="stylesheet" href="./public/css/login.css" />
-    <title>Digtal Exercise Book - Login</title>
-  </head>
-
-  <body>
-    <header class = "row d-flex justify-content-between bg-primary">
-       <h1 class="col col-6">ABC Primary School</h1>
-       <img class="col col-2 col-md-1" src="./public/image/abc_logo_gold.png" alt="ABC school Logo" >
-    </header>
-
-    <main>
         <div class="container d-flex justify-content-center row">
             <div class="col col-6">
                 <div class="m-3">
@@ -36,16 +15,8 @@
                         <button type="button" class="btn btn-primary m-3" id="CreateAccount">Create Account</button>                 
                     </div> 
                 </div>
-                <div class="m-3" id="invalid">**Invalid Input</div>
+                <div class="m-3" id="invalid">**Fail to Login to the System. Please contact system administrtor at admin@example.com.</div>
             </div>
             
             
         </div>
-    </main>
-
-
-    <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./public/js/main.js"></script>
-  </body>
-</html>
