--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,22 +1,19 @@
-        <div class="container d-flex justify-content-center row">
-            <div class="col col-6">
-                <div class="m-3">
-                    <h2 class="shadow-none p-3 mb-3 bg-secondary rounded">Login</h2>
-                    <div class="form-floating">
-                        <input class="form-control mb-3  col-10 col-md-8 border" type="text" id="UserId" placeholder="UserId">
-                        <label for="UserId">User Id</label>
-                    </div>
-                    <div class="form-floating">
-                        <input class="form-control mb-3 col-10 col-md-8 border" type="password" id="userPassword" placeholder="Password">
-                        <label for="userPassword">Password</label>
-                    </div>
-                    <div>
-                        <button type="button" class="btn btn-primary my-3" id="login">Login</button>
-                        <button type="button" class="btn btn-primary m-3" id="CreateAccount">Create Account</button>                 
-                    </div> 
-                </div>
-                <div class="m-3" id="invalid">**Fail to Login to the System. Please contact system administrtor at admin@example.com.</div>
-            </div>
-            
-            
+<div id="loginPartial" class="col col-6">
+    <div class="m-3">
+        <h2 class="shadow-none p-3 mb-3 bg-secondary rounded">Login</h2>
+        <div class="form-floating">
+            <input class="form-control mb-3  col-10 col-md-8 border" type="text" id="UserId" placeholder="UserId">
+            <label for="UserId">User Id</label>
         </div>
+        <div class="form-floating">
+            <input class="form-control mb-3 col-10 col-md-8 border" type="password" id="userPassword" placeholder="Password">
+            <label for="userPassword">Password</label>
+        </div>
+        <div>
+            <button type="button" class="btn btn-primary my-3" id="login" onclick="checkRole()">Login</button>
+            <button type="button" class="btn btn-primary m-3" id="CreateAccount" onclick="changePage('signup')">Create Account</button>                 
+        </div> 
+    </div>
+
+    <div class="m-3" id="invalid" style="display: none">**Fail to Login to the System. Please contact system administrtor at admin@example.com.</div>
+  </div>
