--- a/views/class.handlebars
+++ b/views/class.handlebars
@@ -14,7 +14,8 @@
 
   <body>
     <div class="container d-flex justify-content-center">
-        <div class="col col-6 m-3 bg-light">
+      <div class="row">
+        <div class="col col-5 m-3 bg-light">
             <h2 class="shadow-none p-3 mb-3 bg-secondary rounded">Create New Class</h2>
             <div>
                 <h3>Select Subject and Assign Student(s) to Class</h3>
@@ -44,17 +45,49 @@
                     </li>
                   {{/each}}                                 
                   <li class="list-group-item">
-                    Teacher in Charge: {{teacher.last_name}} {{teacher.first_name}}
+                    Teacher in Charge: {{teacher_email}}
                   </li>
                 </ul>                              
             </div>
-
             <div>
                 <br></br>
+                <!--Add Class button triggers POST request to Class table-->
                 <button type="button m-3" class="btn btn-primary" id="addClass">Add Class</button>
             </div>
-        </div>        
-    </div>
+        </div>  
+
+       {{#if blogs.length}}
+        <div class="col col-6 m-3 bg-light">
+            <h2 class="shadow-none p-3 mb-3 bg-secondary rounded">Existing Classes</h2>
+              <div>
+                  <h3>List of All Classes in School</h3>
+                  <table class="table">
+                      <thead>
+                        <tr>
+                          <th scope="col">#</th>
+                          <th scope="col">Teacher in Charge</th>
+                          <th scope="col">Subject</th>
+                          <th scope="col">No. of Student</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        {{#each classes as |class|}}
+                        <tr>
+                          <td scope="row">{{class.id}}</td>
+                          <td>{{class.teacher_email}}</td>
+                          <td>{{class.subject.title}}</td>
+                          <td>{{class.student_email.length}}</td>
+                        </tr>
+                      {{/each}}                       
+
+                      </tbody>
+                    </table>
+              </div>
+        </div>
+       {{/if}}
+
+      </div>      
+  </div>
 
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
