refine the html desgin after disscussion

--- a/views/studentdashboard.handlebars
+++ b/views/studentdashboard.handlebars
@@ -1,7 +1,7 @@
 <div id="studentDashboardPartial" class="col m-3 bg-light">
         <h2 class="shadow-none p-3 mb-3 bg-secondary rounded">Student Dashboards</h2>
         <div>
-            <h3>Latest Five Article</h3>
+            <h3>Your Exercises</h3>
             <table class="table">
                 <thead>
                 <tr>
@@ -24,7 +24,6 @@
             </table>
         </div>
         <div>
-            <button type="button m-3" class="btn btn-primary" id="viewAllArticle">View All Articles</button>
-            <button type="button m-3" class="btn btn-primary" id="createNewArticle" onclick="changePage('exercise')">Create New Article</button>
+            <button type="button m-3" class="btn btn-primary" id="createNewArticle" onclick="changePage('exercise')">Create New Exercise</button>
         </div>
     </div>
