--- a/views/layout/main.handlebars
+++ b/views/layout/main.handlebars
@@ -16,6 +16,24 @@
     <header class = "row d-flex justify-content-between bg-primary">
        <h1 class="col col-6">ABC Primary School</h1>
        <img class="col col-2 col-md-1" src="./image/abc_logo_gold.png" alt="ABC school Logo" >
+      {{#if logged_in}}
+          <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon">Welcome,{{ExerciseBook.username}}!</span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Logout</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Dashboards</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        {{/if}}
+
     </header>
 
     <main>
@@ -25,6 +43,6 @@
 
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./js/main.js"></script>
+    <script src="./js/hbs.js"></script>
   </body>
 </html>
