--- a/views/studentsignuppage.handlebars
+++ b/views/studentsignuppage.handlebars
@@ -1,5 +1,5 @@
 <div class="col m-3">
-    <h2 class="shadow-none p-3 mb-3 bg-secondary rounded">Student/Teacher Sign Up</h2>
+    <h2 class="shadow-none p-3 mb-3 bg-secondary rounded">Student Sign Up</h2>
     <div class="form-floating">
         <input class="form-control col-10 border mb-3" type="text" id="UserId" placeholder="User Id">
         <label for="UserId">User Id</label>
@@ -21,22 +21,7 @@
         <label for="email">Email address</label>
     </div>
 
-    <div class="row">
-        <div class="form-check m-3">
-            <input class="form-check-input" type="radio" name="Role" id="Student" checked>
-            <label class="form-check-label" for="Student">
-            Student
-            </label>
-        </div>
-        
-        <div class="form-check m-3">
-            <input class="form-check-input" type="radio" name="Role" id="Teacher" >
-            <label class="form-check-label" for="Teacher">
-            Teacher
-            </label>
-        </div>
-    </div>
-
-    <button type="button m-3" class="btn btn-primary">Sign Up</button>
+    <button type="button m-3" class="btn btn-primary">Student Sign Up</button>
+    <button type="button" class="btn btn-primary m-3" id="login" onclick="changePage('Teachersignup')">Create Teacher Account</button> 
     <button type="button" class="btn btn-primary m-3" id="login" onclick="changePage('login')">Login with Existing Account</button>                 
 </div>
