--- a/views/teacherdashboard.handlebars
+++ b/views/teacherdashboard.handlebars
@@ -1,7 +1,7 @@
 <div id="teacherDashboardPartial" class="col m-3 bg-light">
     <h2 class="shadow-none p-3 mb-3 bg-secondary rounded">Teacher Dashboards</h2>
     <div>
-        <h3>Pending Latest Five Student Article</h3>
+        <h3>Your Students Exercises</h3>
         <table class="table">
             <thead>
               <tr>
@@ -24,7 +24,6 @@
           </table>
     </div>
     <div>
-        <button type="button m-3" class="btn btn-primary" id="viewAllPendingArticle">View All Pending Articles</button>
         <button type="button m-3" class="btn btn-primary" id="createNewClass">Create New Class</button>
     </div>
 </div>
