--- a/views/teachersignup.handlebars
+++ b/views/teachersignup.handlebars
@@ -23,6 +23,6 @@
 
 
     <button type="button m-3" class="btn btn-primary">Teacher Sign Up</button>
-    <button type="button" class="btn btn-primary m-3" id="login" onclick="changePage('Teachersignup')">Create Student Account</button> 
+    <button type="button" class="btn btn-primary m-3" id="login" onclick="changePage('studentsignup')">Create Student Account</button> 
     <button type="button" class="btn btn-primary m-3" id="login" onclick="changePage('login')">Login with Existing Account</button>                 
 </div>
