--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,24 +14,30 @@
 
   <body>
     <header class = "row d-flex justify-content-between bg-primary">
-       <h1 class="col col-6">ABC Primary School</h1>
+       <div class="col col-6"><h1>ABC Primary School</h1>
+        {{#if logged_in}}
+        <p>Welcome, {{user.first_name}} {{user.last_name}}!</p>
+        {{/if}}
+       </div>
+    
        <img class="col col-2 col-md-1" src="./image/abc_logo_gold.png" alt="ABC school Logo" >
       {{#if logged_in}}
-          <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon">Welcome,{{ExerciseBook.username}}!</span>
-          </button>
+      <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Logout</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Dashboards</a>
+                <a class="nav-link active" aria-current="page" href="javascript: logout()">Logout</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/">Dashboards</a>
               </li>
             </ul>
           </div>
         </div>
+      </nav>
         {{/if}}
 
     </header>
