--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,12 +2,12 @@
     <div class="m-3">
         <h2 class="shadow-none p-3 mb-3 bg-secondary rounded">Login</h2>
         <div class="form-floating">
-            <input class="form-control mb-3  col-10 col-md-8 border" type="text" id="UserId" placeholder="UserId">
-            <label for="UserId">User Id</label>
+            <input class="form-control mb-3  col-10 col-md-8 border" type="text" id="email" placeholder="Email">
+            <label for="email">Email</label>
         </div>
         <div class="form-floating">
-            <input class="form-control mb-3 col-10 col-md-8 border" type="password" id="userPassword" placeholder="Password">
-            <label for="userPassword">Password</label>
+            <input class="form-control mb-3 col-10 col-md-8 border" type="password" id="password" placeholder="Password">
+            <label for="password">Password</label>
         </div>
         <div>
             <button type="button" class="btn btn-primary my-3" id="login" onclick="checkRole()">Login</button>
