--- a/views/teacherdashboard.handlebars
+++ b/views/teacherdashboard.handlebars
@@ -6,18 +6,20 @@
             <thead>
               <tr>
                 <th scope="col">#</th>
-                <th scope="col">Student name</th>
-                <th scope="col">Title</th>
+                <th scope="col">Student Email</th>
+                <th scope="col">Topic</th>
                 <th scope="col">Grade</th>
+                <th scope="col">Feedback</th>
               </tr>
             </thead>
             <tbody>
-                {{#each ExerciseBook as |item i| }}
+                {{#each ExerciseBooks as |item i| }}
                 <tr>
-                    <td>`+{{i+1}}+`</td>
-                    <td>`+{{item.name}}+`</td>
+                    <td>{{i}}</td>
+                    <td>{{item.student_email}}</td>
                     <td><button type='button' class='btn btn-link' onclick='viewExercise({{item.id}})'>{{item.topic}}</button></td>
-                    <td>`+{{item.grade}}+`</td>
+                    <td>{{item.grade}}</td>
+                    <td>{{item.feedback}}</td>
                 </tr>
                 {{/each}}
             </tbody>
