--- a/views/exercise.handlebars
+++ b/views/exercise.handlebars
@@ -1,7 +1,8 @@
+<script src="/js/exercise.js"></script>
 <div class="col exercise-book"><form>
     <div class="row">
-        <div class="col col-8"><h2>StudentName :{{studentname}} </h2></div>
-        <div class="col col-4"><h2>ExerciseId:{{exerciseid}}</h2></div>                
+        <div class="col col-8"><h2>Student Name: {{user.first_name}} {{user.last_name}}</h2></div>
+        <div class="col col-4"><h2>Exercise ID: {{exerciseId}}</h2></div>                
     </div>
     <div class="row">
         <div class="col col-8">
@@ -13,13 +14,9 @@
         <div class="col col-4">
             <select class="form-select" aria-label="Default select example" id="subject">
                 <option selected>Subject</option>
-                <option value="Maths">Maths</option>
-                <option value="English">English</option>
-                <option value="Science">Science</option>
-                <option value="Design and Technology">Design and Technology</option>
-                <option value="History">History</option>
-                <option value="Food Technology">Food Technology</option>
-                <option value="Business Studies">Business Studies</option>
+                {{#each subjects as |item| }}
+                    <option value="{{item.id}}">{{item.title}}</option>
+                {{/each}}
             </select>
         </div>
     </div>
@@ -49,15 +46,14 @@
             <button type="button" class="teacher-button teacher-button-cancel" onclick="cancelTeacherFeedback()"></button>
         </div>
     </div>
-    <div class="row">
-        <div class="col">
-            <button id="studentModeBtn" type="button" class="btn btn-link" onclick="changeMode('student')">Change to 'Student' mode</button>
-            <button id="teacherModeBtn" type="button" class="btn btn-link" onclick="changeMode('teacher')">Change to 'Teacher' mode</button>
-            <button id="exportExerciseBtn" type="button" class="btn btn-info" onclick="exportExercise()">Export Exercise</button>
-        </div>
-    </div>
+    {{#if isStudent}}
+     <button type="button" class="btn btn-primary" onclick="saveexercise()">Save Exercise</button>
+     {{/if}}
 </form></div>
+
 </div>
 <script>
-    loadExercise({{exercise.id}}, {{userRole}});
+    $(function(){
+        loadExercise({{exerciseId}}, '{{user.role}}');
+    });
 </script>
