--- a/views/studentdashboard.handlebars
+++ b/views/studentdashboard.handlebars
@@ -15,7 +15,7 @@
                 {{#each user.exercise_books as |item i| }}
                 <tr>
                     <td>{{i}}</td>
-                    <td><button type='button' class='btn btn-link' onclick='viewExercise({{item.id}})'>{{item.topic}}</button></td>            
+                    <td><a href='/exercise/{{item.id}}'>{{item.topic}}</a></td>            
                     <td>{{item.grade}}</td>
                     <td>{{item.feedback}}</td>
                 </tr>
