completed exercise page javascript

--- a/public/css/exercise.css
+++ b/public/css/exercise.css
@@ -63,7 +63,7 @@
 }
 
 .noteblock-button-save {
-    background-image: url('/image/save.png');
+    background-image: url('/image/check.png');
 }
 
 .noteblock-button-cancel {
