--- a/views/exercise.handlebars
+++ b/views/exercise.handlebars
@@ -23,7 +23,7 @@
 
     <div class="row">
         <div class="col-8 student-section" id="student-section">
-            <div class="btn-group" role="group" aria-label="Basic example">
+            <div class="btn-group" role="group" aria-label="Basic example" id="student-toolbar">
                 <button type="button" class="btn btn-primary" onclick="addNoteblockTextarea()">Add Text</button>
                 <button type="button" class="btn btn-primary" onclick="addNoteblockImage()">Add Image</button>
                 <button type="button" class="btn btn-primary" disabled>Add Drawing</button>
