--- a/views/studentdashboard.handlebars
+++ b/views/studentdashboard.handlebars
@@ -24,6 +24,6 @@
             </table>
         </div>
         <div>
-            <button type="button m-3" class="btn btn-primary" id="createNewArticle" onclick="changePage('exercise')">Create New Exercise</button>
+            <button type="button m-3" class="btn btn-primary" id="createNewArticle" onclick="createNewExercise()">Create New Exercise</button>
         </div>
     </div>
