--- a/views/teacherdashboard.handlebars
+++ b/views/teacherdashboard.handlebars
@@ -1,30 +1,31 @@
 <div id="teacherDashboardPartial" class="col m-3 bg-light">
     <h2 class="shadow-none p-3 mb-3 bg-secondary rounded">Teacher Dashboards</h2>
     <div>
-        <h3>Pending Latest Five Student Article</h3>
+        <h3>Your Students Exercises</h3>
         <table class="table">
             <thead>
               <tr>
                 <th scope="col">#</th>
-                <th scope="col">Student name</th>
-                <th scope="col">Title</th>
+                <th scope="col">Student Email</th>
+                <th scope="col">Topic</th>
                 <th scope="col">Grade</th>
+                <th scope="col">Feedback</th>
               </tr>
             </thead>
             <tbody>
-                {{#each ExerciseBook as |item i| }}
+                {{#each ExerciseBooks as |item i| }}
                 <tr>
-                    <td>`+{{i+1}}+`</td>
-                    <td>`+{{item.name}}+`</td>
-                    <td><button type='button' class='btn btn-link' onclick='viewExercise({{item.id}})'>{{item.topic}}</button></td>
-                    <td>`+{{item.grade}}+`</td>
+                    <td>{{i}}</td>
+                    <td>{{item.student_email}}</td>
+                    <td><a href='/exercise/{{item.id}}'>{{item.topic}}</a></td>            
+                    <td>{{item.grade}}</td>
+                    <td>{{item.feedback}}</td>
                 </tr>
                 {{/each}}
             </tbody>
           </table>
     </div>
     <div>
-        <button type="button m-3" class="btn btn-primary" id="viewAllPendingArticle">View All Pending Articles</button>
         <button type="button m-3" class="btn btn-primary" id="createNewClass">Create New Class</button>
     </div>
 </div>
