--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -11,7 +11,7 @@
         </div>
         <div>
             <button type="button" class="btn btn-primary my-3" id="login" onclick="checkRole()">Login</button>
-            <button type="button" class="btn btn-primary m-3" id="CreateAccount" onclick="changePage('signup')">Create Account</button>                 
+            <button type="button" class="btn btn-primary m-3" id="CreateAccount" onclick="createAccount()">Create Account</button>                 
         </div> 
     </div>
 
