revise template logos

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,7 @@
         {{/if}}
        </div>
     
-       <img class="col col-2 col-md-1" src="/image/abc_logo_gold.png" alt="ABC school Logo" >
+       <img class="col col-2 col-md-1" src="/image/university.png" alt="Sample school Logo" >
       {{#if logged_in}}
 
         <nav class="navbar navbar-expand-lg bg-light">
