--- a/views/ocr.handlebars
+++ b/views/ocr.handlebars
@@ -1,10 +1,14 @@
 <!--form to upload image file and convert to OCR -->
-<form method="POST" action="http://localhost:3001/profile-upload-single" enctype="multipart/form-data">
-        <div>
-                <label>Upload Image File to OCR Conversion</label>
-                <input type="file" name="profile-file" required/>
-        </div>
-        <div>
-                <input type="submit" value="Upload an Image" />
-        </div>
+<form
+  method="POST"
+  action="/profile-upload-single"
+  enctype="multipart/form-data"
+>
+  <div>
+    <label>Upload Image File to OCR Conversion</label>
+    <input type="file" name="profile-file" required />
+  </div>
+  <div>
+    <input type="submit" value="Upload an Image" />
+  </div>
 </form>
