--- a/views/ocr.handlebars
+++ b/views/ocr.handlebars
@@ -1,7 +1,7 @@
 <!--form to upload image file and convert to OCR -->
 <form
   method="POST"
-  action="http://localhost:3001/profile-upload-single"
+  action="/profile-upload-single"
   enctype="multipart/form-data"
 >
   <div>
